# CFD-Cavity

CFD_C++/: .cproject  .project  gauss_elimination.cpp  gauss_elimination.h  gauss_seidel.cpp  gauss_seidel.h  gs.cpp  test.cpp  thomas.cpp
CFD_C++/Debug/: gauss_elimination.d  gauss_seidel.d  gs.d  makefile  subdir.mk  test.d  thomas.d
CFD_Cavity/: .project  .pydevproject  FinVol_2D_Conv_Diff.py  For_p  Jamroot  LidCavity.py  Main_Lid_DrivenCavity_NS_2D.py  SIMPLE.py  gauss_seidel.h  lidDrivenCavity.py  linalg.cpp  points_per_wavelength.py  streamplot.py  thomas.cpp  thomas.py
CFD_course/: .project  .pydevproject  FinVol_2D_Conv_Diff.py  FinVol_2D_Diffusion.py  FinVol_2D_DiffusionEx7_2.py  FinVol_QUICK-Hayase_2D_Conv_Diff.py  FinVol_QUICK_Hayase_2D_Conv_Diff.py  FinVol_TVD_2D_Conv_Diff.py  FinVol_TVD_2D_Conv_Diff_old.py  Jamroot  Test_2D_Convection_Diffusion.py  Test_2D_Diffusion.py  gaussElimin.py  gaussSeidel.py  gauss_seidel.cpp  linalg.cpp  linalg_testing.cpp  solve_Ax-b.py  test.py  thomas.h
CFD_project/: .project  .pydevproject
Lid_cavity/: Convergence Criteria.f90  Geometry.f90  Grid rectangular.f90  HLPA.f90  Init all cavity.f90~  Init all.f90  Main Cavity.f90  Out array.f90  Solution_of_Flow_in_a_Lid_Driven_Cavity.doc  Solve Pressure Correction.f90  Solve UV.f90  TMDA.f90  adi_2.f  incld.f90  sor_2.f
ML/: CONVERGE.m  DIVCN.m  NSCAVITY.m  REALUNV.m  RESULTS_PLOT.m  RHSP.m  SOLVEP.m  SOLVEUBAR.m  SOLVEVBAR.m  STREAM.m  VORTEX.m  coeff_matrix.m
NavStokes-FinDiff/kmkns-0.1/: PKG-INFO  README.txt  SuperLU_License.txt  setup.py
NavStokes-FinDiff/kmkns-0.1/kmkns/: Keyboard.py  NavierStokes.py  csf.py
NavStokes-FinDiff/kmkns-0.1/poisson/: dutil.c  poisson.cpp  sparse.h
NavStokes-FinDiff/kmkns-0.1/scripts/: advection_test.py  advection_test2.py  bubble_test.py  bubble_test2.py  channel_test.py  channel_test2.py  cylinder_test.py  drop_test.py  drop_test2.py  poisson_test.py  pressure_test.py  pressure_test2.py  profile_test.py  rayleigh_taylor_test.py  rayleigh_taylor_test2.py  square_test.py  square_test2.py  square_test3.py  static_drop_test.py  static_drop_test2.py  step_test.py  step_test2.py  tutorial1.py  tutorial2.py
NavStokes-FinDiff/kmkns-0.1/vof/: main.cpp  vof.cpp  vof.h
cfd_lib/: .cproject  .project  spammodule.c  spammodule.h
cfd_lib/Debug/: makefile  spammodule.d  subdir.mk
ml/cc/exercises/: binary_classification_rice.ipynb
nast3dgp-2.08/nast3dgp-2.08/: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
nast3dgp-2.08/nast3dgp-2.08/doc/: Makefile.am  Makefile.in
nast3dgp-2.08/nast3dgp-2.08/examples/BackwardFacingStep/: bwf_step.nav
nast3dgp-2.08/nast3dgp-2.08/examples/Cavity/: cavity.nav
nast3dgp-2.08/nast3dgp-2.08/examples/RayleighBenard/: rb.nav  rb3D.nav  rb_glyc.nav
nast3dgp-2.08/nast3dgp-2.08/m4/: acx_mpi.m4
nast3dgp-2.08/nast3dgp-2.08/mpi/: Makefile.am  Makefile.in
nast3dgp-2.08/nast3dgp-2.08/src/: Makefile.VC5  Makefile.am  Makefile.common  Makefile.in  bound.cxx  config.h.in  convective.cxx  convective.h  list.h  main.cxx  matrix.h  navcalc.cxx  navier.cxx  navier.h  navsetup.cxx  object.cxx  object.h  parallel.h  parmpi.cxx  parse.cxx  parse.h  poisson.cxx  tokenizer.cxx  tokenizer.h  typen.cxx  typen.h
nast3dgp-2.08/nast3dgp-2.08/tools/: Makefile.am  Makefile.in
nast3dgp-2.08/nast3dgp-2.08/tools/GridGen/: GridGen.f
nast3dgp-2.08/nast3dgp-2.08/tools/visualization/matlab/: ReadNaSt3D.m  StreamFunction.m  cavity.m
nast3dgp-2.08/nast3dgp-2.08/tools/visualization/vtk/: README  viewNaSt3DGP.tcl
nast3dgp-2.08/nast3dgp-2.08/tools/vrml2nav/: Makefile.am  Makefile.in  vrml2nav.cxx  vrml2nav.h
nast3dgp-2.08/nast3dgp-2.08/tools/vrml2nav/examples/: submarine.wrl  vrml2nav.cfg
